Try to fix thumbnail being too large

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -109,6 +109,7 @@ img {
 }
 
 .gallery img {
+  width: 138px;
   height: 92px;
   margin: 10px 0;
   cursor: pointer;
